# pr2_fingertip_sensors

./: CMakeLists.txt
CubeIDE/PFS-01/Core/Inc/: sensor.h
CubeIDE/PFS-01/Core/Src/: main.c  sensor.c
scripts/: parse_serial.py
